--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10, 10)\n",
-    "plt.style.available"
+    "plt.style.available\n"
    ]
   },
   {
